...
    android:background="@color/colorPrimaryLight"
    android:gravity="end"
    >

    <Button
        style="@style/FlatButton"
        android:id="@+id/negative_button"
        android:text="@string/cancel"
        />

    <Button
        style="@style/FlatButton"
        android:id="@+id/positive_button"
        android:text="@string/confirm"
        />
</LinearLayout>
