...
        style="@style/LightEditText"
        android:id="@+id/edit_performer_name"
        app:errorEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/performer_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/performer_name"
            android:lines="1"
            android:maxLines="1"
            />
...
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View style="@style/HeaderDivider"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/linked_movies_list"
                android:layout_width="match_parent"
                android:layout_height="@dimen/linked_portrayables_height"
                android:background="@color/white"
                />

            <View style="@style/AttributeEnd"/>
...
