...
    <item
        android:id="@+id/bottom_navigation_movies"
        android:icon="@drawable/ic_bottom_movie"
        android:title="@string/bottom_navigation_menu_movies"/>

    <item
        android:id="@+id/bottom_navigation_performers"
        android:icon="@drawable/ic_bottom_performer"
        android:title="@string/bottom_navigation_menu_performers"/>

    <item
        android:id="@+id/bottom_navigation_search"
        android:icon="@drawable/ic_bottom_search"
...
