...
        android:id="@+id/undo"
        android:icon="@drawable/ic_detail_edit_undo"
        android:title="@string/edit_action_undo"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/commit"
        android:icon="@drawable/ic_detail_edit_confirm"
        android:title="@string/edit_action_commit"
        app:showAsAction="always"
        />
</menu>
