...
        android:paddingEnd="@dimen/default_padding"
        android:text=""
        android:textSize="20sp"
        android:textColor="@color/black"
        android:hint="@string/date_selection_view_empty_date"

        app:layout_constraintBottom_toBottomOf="@+id/select_date"
        app:layout_constraintEnd_toStartOf="@+id/select_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
...
